--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         
-        <audio autoplay controls id="bg-music">
+        <audio autoplay loop controls id="bg-music">
             <source src="./assets/embark.mp3" type="audio/mpeg">
         </audio>
     </body>
